# diverssite

./: .env.example  .gitignore  .gitmodules  .pylintrc  README.md  README.md.bak  db.sqlite3  fixtures.json  manage.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  codeql-analysis.yml
diverssite/: asgi.py  saxydivers_wsgi.py  settings.py  urls.py  wsgi.py
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0001_squashed_0012_auto_20201105_1738.py  0002_auto_20200208_0856.py  0002_auto_20200216_0059.py  0003_auto_20200216_0102.py  0003_event_description.py  0004_auto_20200212_0001.py  0004_auto_20200216_0111.py  0005_auto_20200214_2109.py  0005_auto_20200216_1528.py  0006_auto_20200228_2109.py  0007_auto_20200305_1253.py  0008_auto_20200305_1304.py  0009_remove_event_category.py  0010_auto_20200806_2359.py  0011_auto_20201104_2231.py  0011_auto_20201105_1738.py  0012_auto_20201105_1738.py
mail/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mail/migrations/: 0001_initial.py  0001_squashed_0005_auto_20200705_1401.py  0002_auto_20200704_1610.py  0003_auto_20200704_1612.py  (+2 more)
polls/: admin.py  models.py  tests.py  urls.py  views.py
public/: admin.py  models.py  urls.py  views.py
scripts/: export_user_data.py  move_media.py  save_models.py
static/polls/: style.css
templates/: 403.html  403_csrf.html
ultistats/: apps.py  forms.py  models.py  urls.py  views.py
users/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
wiki/: admin.py  forms.py  models.py  urls.py  views.py
(+84 files in other folders)
