[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diverssite"
authors = [
    {name = "Florian Schunck", email = "fluncki@protonmail.com"}
]
requires-python = ">=3.9"
readme = "README.md"
version = "0.2.0"
dependencies = [
    "asgiref==3.3.1",
    "chardet==4.0.0",
    "Django==3.1.12",
    "django-crispy-forms==1.9.2",
    "django-csvimport==2.16",
    "django-markdownx==3.0.1",
    "gunicorn==20.0.4",
    "Markdown==3.3.3",
    "Pillow==8.2.0",
    "psycopg2-binary==2.8.5",
    "python-dotenv==0.14.0",
    "pytz==2021.1",
    "six==1.15.0",
    "sqlparse==0.4.1",
    "pandas",
    "django-csvimport==2.16",
    "django-simple-history==3.0.0",
    "black",
    "django-dbbackup==4.0.2",
    "django-extensions==3.1.5",
]

[tool.setuptools.packages]
find = {namespaces = false}